# lsftoslurm

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/lsftoslurm/: bjobs.py  bkill.py  bsub.py
